--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
+    margin: 0;
+    background-image: url('https://i.ibb.co/HHGqskQ/Thu-20-06-2024-16-41-24.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 .game-canvas {
